--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Use Ruby ${{ matrix.ruby }} on ${{ matrix.os }}
         uses: actions/setup-ruby@v1
-      - name: install changelog-generator
+      - name: Get version information and push to repo
         run: |
           git log > VERSION.md
           git commit -m "Updating version information" VERSION.md
