--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -12,7 +12,7 @@ jobs:
         #os: [windows-latest, windows-2019, windows-2016, ubuntu-latest, ubuntu-18.04, ubuntu-16.04, macOS-latest, macOS-10.14]
         ruby: [2.4]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@master
       - name: Get version information and push to repo
         run: |
           git log > VERSION.md
