--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -1,7 +1,6 @@
 name: Version Information Generator
 on:
-  push:
-  pull_request:
+  release:
 jobs:
   test:
     name: Test
@@ -10,11 +9,11 @@ jobs:
       matrix:
         os: [windows-latest]
         #os: [windows-latest, windows-2019, windows-2016, ubuntu-latest, ubuntu-18.04, ubuntu-16.04, macOS-latest, macOS-10.14]
-        ruby: [2.4]
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
       - name: Get version information and push to repo
         run: |
+          git
           git log > VERSION.md
           git config --global user.email "dhaynes@mitre.org"
           git commit -m "Updating version information" VERSION.md
