--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -17,7 +17,10 @@ jobs:
       - name: install changelog-generator
         run: |
           gem install github_changelog_generator
+      - name: run changelog-generator and commit changes
+        run: |
           github_changelog_generator -u djhaynes -p inspec_tools
+          cat CHANGELOG.md
           git commit -m "Updating changelog" CHANGELOG.md
           git push
         env:
