--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -27,13 +27,13 @@ jobs:
           cat CHANGELOG.md
       - name: commit and push changes 
         run: |
-          git config --global user.name "Danny Haynes"
-          git config --global user.email "dhaynes@mitre.org"
+          #git config --global user.name "Danny Haynes"
+          #git config --global user.email "dhaynes@mitre.org"
           git clone https://github.com/djhaynes/inspec_tools.git
           mv CHANGELOG.md inspec_tools
           cd inspec_tools
-          git remote add upstream https://github.com/mitre/inspec_tools.git
-          git remote add origin https://github.com/djhaynes/inspec_tools.git
+          #git remote add upstream https://github.com/mitre/inspec_tools.git
+          #git remote add origin https://github.com/djhaynes/inspec_tools.git
           git commit -m "Updating changelog" CHANGELOG.md
           git push
         env:
