--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -31,8 +31,8 @@ jobs:
           cat CHANGELOG.md 
       - name: commit and push changes 
         run: |
-          #git config --global user.name "Danny Haynes"
-          #git config --global user.email "dhaynes@mitre.org"
+          git config --global user.name "Danny Haynes"
+          git config --global user.email "dhaynes@mitre.org"
           #git clone https://github.com/djhaynes/inspec_tools.git
           #mv CHANGELOG.md inspec_tools
           #cd inspec_tools
