--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -28,17 +28,23 @@ jobs:
           github_changelog_generator -u djhaynes -p inspec_tools
       - name: cat changelog
         run: |
-          cat CHANGELOG.md 
-      - name: commit and push changes 
-        run: |
-          git config --global user.name "Danny Haynes"
-          git config --global user.email "dhaynes@mitre.org"
+          cat CHANGELOG.md
+      - name: Commit changed files
+        uses: stefanzweifel/git-auto-commit-action@v2.1.0
+        with:
+          commit_message: Updating changelog
+          branch: ${{ github.head_ref }}
+      #- name: commit and push changes 
+        #run: |
+          #git config --global user.name "Danny Haynes"
+          #git config --global user.email "dhaynes@mitre.org"
           #git clone https://github.com/djhaynes/inspec_tools.git
           #mv CHANGELOG.md inspec_tools
           #cd inspec_tools
           #git remote add upstream https://github.com/mitre/inspec_tools.git
           #git remote add origin https://github.com/djhaynes/inspec_tools.git
-          git commit -m "Updating changelog" CHANGELOG.md
-          git push
+          #git commit -m "Updating changelog" CHANGELOG.md
+          #git push
         env:
           CI: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
