--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -29,10 +29,9 @@ jobs:
       - name: cat changelog
         run: |
           cat CHANGELOG.md
-      - name: Commit changed files
-        uses: stefanzweifel/git-auto-commit-action@v2.1.0
+      - uses: stefanzweifel/git-auto-commit-action@v2.1.0
         with:
-          commit_message: Updating changelog
+          commit_message: Apply automatic changes
           branch: ${{ github.head_ref }}
       #- name: commit and push changes 
         #run: |
