--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -29,10 +29,13 @@ jobs:
       - name: cat changelog
         run: |
           cat CHANGELOG.md
-      - uses: stefanzweifel/git-auto-commit-action@v2.1.0
+      - name: push
+        uses: github-actions-x/commit@v2.1
         with:
-          commit_message: Apply automatic changes
-          branch: ${{ github.head_ref }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          push-branch: 'master'
+          commit-message: 'publish changelog'
+          force-add: 'true'
       #- name: commit and push changes 
         #run: |
           #git config --global user.name "Danny Haynes"
@@ -46,4 +49,3 @@ jobs:
           #git push
         env:
           CI: true
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
