--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -10,13 +10,21 @@ jobs:
         os: [windows-latest]
         #os: [windows-latest, windows-2019, windows-2016, ubuntu-latest, ubuntu-18.04, ubuntu-16.04, macOS-latest, macOS-10.14]
     steps:
-      - uses: actions/checkout@v1
-      - name: Get version information and push to repo
+      - name: get repo
+        uses: actions/checkout@v1  
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}   
+      - name: get version information
         run: |
-          git
-          git log > VERSION.md
-          git config --global user.email "dhaynes@mitre.org"
-          git commit -m "Updating version information" VERSION.md
-          git push
+          git show -s $(git describe --tags $(git rev-list --tags --max-count=1)) > VERSION.md
+      - name: push
+        uses: github-actions-x/commit@v2.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          push-branch: 'master'
+          commit-message: 'publish changelog'
+          force-add: 'true'
         env:
           CI: true
+
+
