--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -19,7 +19,7 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}   
       - name: get version information
         run: |
-          git show -s $(git describe --tags $(git rev-list --tags --max-count=1)) > VERSION.md
+          git show -s ${{ latest_tag }} > VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
         with:
@@ -29,5 +29,7 @@ jobs:
           force-add: 'true'
         env:
           CI: true
+          latest_commit: git rev-list --tags --max-count=1
+          latest_tag: git describe --tags ${{ latest_commit }}
 
 
