--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -29,7 +29,7 @@ jobs:
           force-add: 'true'
         env:
           CI: true
-          latest_commit: git rev-list --tags --max-count=1
-          latest_tag: git describe --tags ${{ latest_commit }}
+          #latest_commit: git rev-list --tags --max-count=1
+          #latest_tag: git describe --tags ${{ latest_commit }}
 
 
