--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -18,10 +18,9 @@ jobs:
         with:
           token: ${{secrets.GITHUB_TOKEN}}   
       - name: get version information
-        env: 
-          COMMIT: git rev-list --tags --max-count=1 
-          TAG: git describe --tags ${{ COMMIT }} 
         run: |
+          export COMMIT = 'git rev-list --tags --max-count=1'
+          export TAG = 'git describe --tags $COMMIT
           git show -s ${{ TAG }} > VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
