--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           export COMMIT = 'git rev-list --tags --max-count=1'
           export TAG = 'git describe --tags $COMMIT'
-          git show -s ${{ TAG }} > VERSION.md
+          git show -s $TAG > VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
         with:
