--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           TAG: git describe --tags `git rev-list --tags --max-count=1`
         run: |
-          git show -s $TAG > VERSION.md
+          git show -s ${{TAG}} > VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
         with:
