--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -19,7 +19,8 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}   
       - name: get version information
         run: |
-          git show -s $(git describe --tags $(git rev-list --tags --max-count=1))
+          git describe --tags $(git rev-list --tags --max-count=1) > VERSION.md
+          git show -s $(git describe --tags $(git rev-list --tags --max-count=1)) >> VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
         with:
