--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -19,11 +19,11 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}   
       - name: get version information
         run: |
-          echo "Release: " > VERSION.md
+          echo "**Release:** " > VERSION.md
           git describe --tags $(git rev-list --tags --max-count=1) >> VERSION.md
-          echo "<br>Date: " >> VERSION.md
+          echo "<br>**Date:** " >> VERSION.md
           git show -s --format=%ci $(git rev-list --tags --max-count=1) >> VERSION.md
-          echo "<br> Commit: " >> VERSION.md
+          echo "<br>**Commit:** " >> VERSION.md
           git rev-list --tags --max-count=1 >> VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
