--- a/.github/workflows/version-info.yml
+++ b/.github/workflows/version-info.yml
@@ -21,9 +21,9 @@ jobs:
         run: |
           echo "**Release:** " > VERSION.md
           git describe --tags $(git rev-list --tags --max-count=1) >> VERSION.md
-          echo "<br>**Date:** " >> VERSION.md
+          echo "<br><br>**Date:** " >> VERSION.md
           git show -s --format=%ci $(git rev-list --tags --max-count=1) >> VERSION.md
-          echo "<br>**Commit:** " >> VERSION.md
+          echo "<br><br>**Commit:** " >> VERSION.md
           git rev-list --tags --max-count=1 >> VERSION.md
       - name: push
         uses: github-actions-x/commit@v2.1
