--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           gem install rubocop
       - name: rubocop
         run: |
-          rubocop
+          #rubocop
       - name: gem build
         run: | 
           gem build inspec_tools.gemspec
