--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -25,6 +25,7 @@ jobs:
           gem install github_changelog_generator
       - name: run github_changelog_generator
         run: |
+          git pull origin master
           export CHANGELOG_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           github_changelog_generator -u djhaynes -p inspec_tools
       - name: push
