--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: InSpec Tools Workflow
+name: inspec_tools
 on:
   push:
   pull_request:
@@ -8,35 +8,38 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
-        #os: [windows-latest, windows-2019, windows-2016, ubuntu-latest, ubuntu-18.04, ubuntu-16.04, macOS-latest, macOS-10.14]
+        os: [ubuntu-latest]
+#        os: [windows-latest, windows-2019, windows-2016, ubuntu-latest, ubuntu-18.04, ubuntu-16.04, macOS-latest, macOS-10.14]
         ruby: [2.4]
     steps:
+      - name: Checkout inspec_tools
       - uses: actions/checkout@v1
       - name: Use Ruby ${{ matrix.ruby }} on ${{ matrix.os }}
         uses: actions/setup-ruby@v1
-      - name: install latest bundler
+      - name: Install bundler
         run: |
           gem install bundler
-      - name: bundle install
+      - name: Run bundle install
         run: |
           bundle install
-      - name: rake test
+      - name: Run rake test
         run: |
           rake test
-      - name: install rubocop
-        run: |
-          gem install rubocop
-      - name: gem build
+#      - name: Install rubocop
+#        run: |
+#          gem install rubocop
+#      - name: Run rubocop
+#        run: |
+#          rubocop
+      - name: Build inspec_tools gem
         run: | 
           gem build inspec_tools.gemspec
-      - name: gem install
+      - name: Install inspec_tools gem
         run: |
           gem install inspec_tools
-      - name: run
-        run: |
-          inspec_tools
-          yes
+#      - name: Run inspec_tools
+#        run: |
+#          inspec_tools
         env:
           CI: true
         
