--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout inspec_tools 
     - uses: actions/checkout@master
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@master
