--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         ruby: [2.4]
     steps:
       - name: Checkout inspec_tools
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
       - name: Use Ruby ${{ matrix.ruby }} on ${{ matrix.os }}
         uses: actions/setup-ruby@v1
       - name: Install bundler
