--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout inspec_tools 
-    - uses: actions/checkout@master
+      uses: actions/checkout@master
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@master
       env:
