--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -18,6 +18,7 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}   
       - name: Collection version information to put in VERSION.md
         run: |
+          git pull origin master
           echo "**Release:** " > VERSION.md
           git describe --tags $(git rev-list --tags --max-count=1) >> VERSION.md
           echo "<br><br>**Date:** " >> VERSION.md
