--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - name: Checkout inspec_tools 
       uses: actions/checkout@master
-    - name: Bump version and push tag
+    - name: Increment version and push tag
       uses: anothrNick/github-tag-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
