--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,17 +4,12 @@ on:
   pull_request:
 jobs:
   test:
-    name: Test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-#       os: [windows-latest, windows-2019, windows-2016, ubuntu-latest, ubuntu-18.04, ubuntu-16.04, macOS-latest, macOS-10.14]
-        ruby: [2.4]
+    name: Build and test inspec_tools
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout inspec_tools
         uses: actions/checkout@v1
-      - name: Use Ruby ${{ matrix.ruby }} on ${{ matrix.os }}
+      - name: Setup ruby
         uses: actions/setup-ruby@v1
       - name: Install bundler
         run: |
