--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -6,11 +6,8 @@ on:
       - master
 jobs:
   test:
-    name: Test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
+    name: Generate VERSION.md
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout inspec_tools
         uses: actions/checkout@v1  
