--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -22,6 +22,8 @@ jobs:
           git show -s --format=%ci $(git rev-list --tags --max-count=1) >> VERSION.md
           echo "<br><br>**Commit:** " >> VERSION.md
           git rev-list --tags --max-count=1 >> VERSION.md
+          printf "module InspecTools\n  VERSION = '$(git describe --tags $(git rev-list --tags --max-count)'.freeze\nend\n" > lib/inspec_tools/version.rb
+
       - name: Commit and push changes to VERSION.md
         uses: github-actions-x/commit@v2.1
         with:
