--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -2,8 +2,8 @@ name: Generate VERSION.md
 on:
   push:
     # branches to consider in the event; optional, defaults to all
-    branches:
-      - master
+   # branches:
+    #  - master
 jobs:
   test:
     name: Generate VERSION.md
