--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -9,11 +9,26 @@
     name: Generate CHANGELOG.MD
     runs-on: ubuntu-latest
     steps:
-    - name: Conventional Changelog Action
-      uses: TriPSs/conventional-changelog-action@v1.2.0
-      with:
-        github-token: ${{ secrets.github_token }}
-        git-message: 'chore(release): {version}'
-        preset: 'angular'
-        tag-prefix: 'v'
-        output-file: 'CHANGELOG.md'
+      - name: Setup ruby
+        uses: actions/setup-ruby@v1
+      - name: Checkout inspec_tools
+        uses: actions/checkout@v1  
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}   
+      - name: Install github_changelog_generator
+        run: |
+          gem install github_changelog_generator
+      - name: Run github_changelog_generator
+        run: |
+          git pull origin master
+          export CHANGELOG_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          github_changelog_generator -u djhaynes -p inspec_tools
+      - name: Commit and push changes to CHANGELOG.md
+        uses: github-actions-x/commit@v2.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          push-branch: 'master'
+          commit-message: 'Publish changelog'
+          force-add: 'true'
+        env:
+          CI: true
