--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Publish Release
 
 on:
-  push:
+  release:
     # branches to consider in the event; optional, defaults to all
     branches:
       - master
