--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,14 @@
 name: Test
 on:
   push:
+    branches:
+      - master
 jobs:
-  test:
-    name: Test
+  build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: Test
-        uses: djhaynes/github-version-action
-        with:
-          token: ${{secrets.GITHUB_TOKEN}}   
+        uses: djhaynes/github-version-action@master
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}   
