--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,6 @@ jobs:
       - name: Test 
         uses: djhaynes/github-tag-action@master
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}   
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}  
+          DEFAULT_BUMP: patch
+          WITH_V: true   
